--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ textarea {
 	border-width: 2px; 
 	border-style: solid;
 	letter-spacing : 2px;
+	overflow: hidden;
 	font-size:1em; 
 	color: #313131; 
 	text-align: center;
